# atelier

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONCEPTS.md  Makefile  PROMPT.pipeline.md  README.md  pyproject.toml  ralph.bootstrap.yml  ralph.pipeline.yml
_templates/agent-template/.{{cookiecutter.agent_slug}}/: .env.example  AGENTS.md  Dockerfile  Makefile  langgraph.json  pyproject.toml
_templates/agent-template/.{{cookiecutter.agent_slug}}/docs/: MCP_AND_SKILLS.md  PROMPT.md  README.md
_templates/agent-template/.{{cookiecutter.agent_slug}}/skills/code-review-mindset/: SKILL.md
_templates/agent-template/.{{cookiecutter.agent_slug}}/src/{{cookiecutter.agent_slug }}/: __init__.py
_templates/agent-template/.{{cookiecutter.agent_slug}}/src/{{cookiecutter.agent_slug}}/: agent.py  checkpointer.py  cli.py  mcp_servers.py  prompts.py  skills_loader.py  state.py  subagents.py  tools.py
_templates/agent-template/.{{cookiecutter.agent_slug}}/tests/: conftest.py
_templates/agent-template/.{{cookiecutter.agent_slug}}/tests/integration/: test_state_flow.py
_templates/agent-template/.{{cookiecutter.agent_slug}}/tests/unit/: test_agent.py  test_prompts.py
agents/code-writer/: .env.example  AGENTS.md  Dockerfile  Makefile  langgraph.json  pyproject.toml
agents/code-writer/docs/: INTERRUPTS.md  LLM_PROVIDERS.md  MCP_AND_SKILLS.md  PROMPT.md  README.md
agents/code-writer/skills/code-review-mindset/: SKILL.md
agents/code-writer/skills/conventional-commit/: SKILL.md
agents/code-writer/src/code_writer/: __init__.py  agent.py  cli.py  interrupts.py  llm.py  mcp_servers.py  prompts.py  skills_loader.py  state.py  subagents.py  tools.py  tracing.py
agents/code-writer/tests/: conftest.py
agents/code-writer/tests/integration/: test_state_flow.py
agents/code-writer/tests/unit/: test_agent.py  test_prompts.py  test_rule_eight.py  test_tools.py
agents/compound-builder/: .env.example  AGENTS.md  Makefile  langgraph.json  pyproject.toml
agents/compound-builder/docs/: INTERRUPTS.md  MCP_AND_SKILLS.md  PROMPT.md  README.md
agents/compound-builder/scripts/: verify_m3_responses_effort.py  verify_thinking_level.py
agents/compound-builder/src/compound_builder/: __init__.py  agent.py  checkpointer.py  cli.py  coordinator_plan.py  env.py  flow_verify.py  git_ops.py  graph.py  interrupts.py  llm.py  mcp_servers.py  progress.py  prompts.py  prompts_dimensions.py  react_agent.py  review_artifacts.py  review_context.py  review_diff.py  review_worker.py  reviewer_agent.py  skills_loader.py  state.py  subagents.py  tools.py  tracing.py  validator_agent.py  validator_worker.py  workdir_ctx.py  worker.py
agents/compound-builder/src/compound_builder/nodes/: __init__.py  coordinator.py  dimension_reviewer.py  executor.py  fixer.py  progress_steward.py  reporter.py  review_coordinator.py  review_synthesizer.py  shipper.py  validator.py
agents/compound-builder/tests/: conftest.py
agents/compound-builder/tests/eval/datasets/: metadata.json  plan-characterization.md  plan-ralph-units.md  plan-refactor.md  plan-tdd.md  plan-trivial.md
agents/compound-builder/tests/integration/: test_state_flow.py
agents/compound-builder/tests/unit/: test_coordinator_plan.py  test_env.py  test_fixer_target.py  test_flow_verify.py  test_git_ops.py  test_phase_authority.py  test_prompts.py  test_react_agent.py  test_repair_budget.py  test_review_artifacts.py  test_review_diff.py  test_review_worker.py  test_reviewer_agent.py  test_state_schema.py  test_tools.py  test_validator_agent.py  test_validator_phase.py  test_validator_worker.py
agents/modem-log-analyzer/: .env.example  .gitignore  AGENTS.md  Makefile  langgraph.json  pyproject.toml
agents/modem-log-analyzer/docs/: ARCHITECTURE.md  COMMAND_CATALOG.md  EXAMPLES.md  INTERRUPTS.md  MCP_AND_SKILLS.md  OPERATIONS.md  PRIVACY.md  PROMPT.md  README.md  TESTING.md
agents/modem-log-analyzer/knowledge/: modemcli_commands.yaml
agents/modem-log-analyzer/skills/conventional-commit/: SKILL.md
agents/modem-log-analyzer/src/modem_log_analyzer/: __init__.py  agent.py  agent_runner.py  analysis_service.py  checkpointer.py  classification.py  cli.py  command_catalog.py  contracts.py  control_log_policy.py  env.py  evidence.py  intake.py  interrupts.py  llm.py  log_parser.py  mcp_servers.py  prompts.py  report.py  run_context.py  scenario_inference.py  skills_loader.py  spine_validate.py  state.py  subagents.py  tools.py  tools_simple.py  tracing.py
agents/modem-log-analyzer/tests/: conftest.py
agents/modem-log-analyzer/tests/acceptance/: test_cli_contract.py
agents/modem-log-analyzer/tests/e2e/: test_end_to_end.py
agents/modem-log-analyzer/tests/eval/: test_datasets.py
agents/modem-log-analyzer/tests/fixtures/e2e_cases/case_call_failure/: expected.json
agents/modem-log-analyzer/tests/fixtures/e2e_cases/case_data_ping_failure/: expected.json
agents/modem-log-analyzer/tests/fixtures/e2e_cases/case_mixed_call_sms_ping/: expected.json
agents/modem-log-analyzer/tests/fixtures/reference_case_52/: expected.json
agents/modem-log-analyzer/tests/fixtures/reports/: timeline_spine_case52_draft.json
agents/modem-log-analyzer/tests/integration/: test_agent_diagnosis.py  test_cli_agent_runner.py  test_cli_analyze.py  test_cli_intake.py  test_gateway.py  test_interrupt_resume.py  test_timeline_spine_case52_structure.py
agents/modem-log-analyzer/tests/unit/: test_agent_runner.py  test_classification.py  test_command_catalog.py  test_contracts.py  test_control_log_policy.py  test_intake.py  test_log_parser.py  test_preprocess_tools.py  test_prompts_and_subagents.py  test_report_renderer.py  test_report_timeline_spine.py  test_skills_loader.py  test_spine_validate.py  test_tool_registry.py
gateway/api/: README.md  auth.py  main.py  pyproject.toml  registry.py
gateway/api/routers/: __init__.py  code_writer.py  compound_builder.py  modem_log_analyzer.py
libs/common/: README.md  pyproject.toml
libs/common/src/common/: __init__.py
libs/common/tests/: test_smoke.py
scripts/: e2e_modem_log_analyzer.py  smoke.sh  (+1 more)
(+18 files in other folders)
