[project]
name = "compound_builder"
version = "0.1.0"
description = "Plan-driven multi-agent orchestrator that runs unit-by-unit TDD workflow with parallel review and ship gating."
readme = "docs/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Atelier Team", email = "team@example.com" }]

dependencies = [
    "atelier-common>=0.1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "langchain>=0.3",
    "langchain-anthropic>=0.2",
    "langsmith>=0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "click>=8.1",
]

[project.scripts]
compound_builder = "compound_builder.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "langgraph-cli[inmem]>=0.2",
]

[tool.uv]
package = true

[tool.uv.sources]
atelier-common = { path = "../../libs/common" }

[tool.hatch.build.targets.wheel]
packages = ["src/compound_builder"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
