[project]
name = "atelier-gateway"
version = "0.1.0"
description = "Atelier 统一对外 FastAPI 网关：路由多个 Agent / 鉴权 / 流式 / 中断转发。"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "atelier-common>=0.1.0",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "fastapi[testclient]>=0.111",
]

[tool.ruff]
line-length = 100
target-version = "py311"
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
