[project]
name = "{{ cookiecutter.agent_slug }}"
version = "{{ cookiecutter.agent_version }}"
description = "{{ cookiecutter.agent_description }}"
readme = "docs/README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" },
]

dependencies = [
    "atelier-common>=0.1.0",
    "langgraph>=0.2",
    "deepagents>=0.2",
    "langchain>=0.3",
    "langsmith>=0.3",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "click>=8.1",
    {% if cookiecutter.include_mcp_github == "yes" %}
    "langchain-mcp-adapters>=0.1",
    {% endif %}
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.11",
    "langgraph-cli>=0.2",
    {% if cookiecutter.include_docker == "yes" %}
    "docker>=7.0",
    {% endif %}
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
